# nasa-waste-calc

./: .gitignore  ARTEMIS-II-DOCS.md  CMakeLists.txt  DEPLOYMENT-GUIDE.md  LICENSE  NetworkBuster Lunar Recycling System - Documentation Hub.html  PROJECT-SUMMARY.md  README.md  RELEASE.md  SECURITY-UPDATE.md  TESTING-RESULTS.md  css2  demo.html  docker-compose.yml  styles.css
_codeql_build_dir/examples/: minecraft_enhanced  mobile_storage_example  survival_game
_codeql_build_dir/tests/: test_ecosystem  test_physics  test_renderer  test_storage
docs/: API_Reference.md  Architecture.md  Contributing.md  Tutorial.md
editor/: CMakeLists.txt
engine/ai/: BehaviorTree.h  Pathfinding.h
engine/audio/: AudioEngine.h
engine/core/: Application.h  Input.h  StorageManager.h  Time.h  Window.h
engine/nature/: EcosystemSimulation.h  TreeRenderer.h  TreeRendererImpl.h  VegetationSystem.h  WaterRenderer.h  WeatherSystem.h
engine/renderer/: Material.h  Mesh.h  RayTracing.h  Renderer.h
examples/: CMakeLists.txt
examples/artemis_demo/: INTEGRATION.md  NAVIGATION.md  main.cpp
examples/artemis_mission_demo/: CMakeLists.txt  README.md  main.cpp
examples/minecraft_enhanced/: main.cpp
examples/mobile_storage/: CMakeLists.txt  main.cpp
examples/survival_game/: main.cpp
examples/vulkan_translation_demo/: CMakeLists.txt  README.md  main.cpp
runtime/: GameLoader.h
services/artemis-ii/: Dockerfile  README.md  requirements.txt
services/artemis-ii-ui/: Dockerfile  README.md  nginx.conf  package.json
services/artemis-ii-ui/public/: index.html
services/artemis-ii-ui/src/: App.jsx
services/artemis-ii-ui/src/components/: AlertPanel.jsx  CrewHealth.jsx  MissionControl.jsx  SpacecraftView.jsx  SystemStatus.jsx  TelemetryPanel.jsx  Timeline.jsx
services/artemis-ii-ui/src/hooks/: useTelemetry.js
services/artemis-ii-ui/src/styles/: index.css  mission-control.css
services/artemis-ii/app/: __init__.py  main.py  models.py  orbital_mechanics.py
services/artemis-ii/data/: nominal_parameters.yaml
services/artemis-ii/simulation/: __init__.py  telemetry_simulator.py
tests/: CMakeLists.txt  test_ecosystem.cpp  test_physics.cpp  test_renderer.cpp  test_storage.cpp
