cmake_minimum_required(VERSION 3.20)

# Editor application (would use ImGui or similar)
# For now, just define the target

message(STATUS "Visual editor tools:")
message(STATUS "  - Editor UI framework: ImGui (to be integrated)")
message(STATUS "  - Terrain editor: Planned")
message(STATUS "  - Material editor: Planned")
message(STATUS "  - Animation tools: Planned")

# Future: Add editor executable here
# add_executable(nature_editor editor_main.cpp)
# target_link_libraries(nature_editor PRIVATE NatureRealityEngine ImGui)
